package at.spengergasse.photoalbum.domain;

public enum EmailType {

    PRIVATE,
    BUSINESS,

}
