@startuml
'https://plantuml.com/class-diagram

entity Photo {
- fileName : String
- name : String
- creationTS : LocalDateTime
- width : Integer
- height : Integer
- photographer : Photographer
- orientation : Orientation
- taggedPerson : Set<TaggedPerson>
}

class AlbumPhoto << (V, #FF7700) value-object >> {
- photo : Photo
- position : Integer
- assignmentTS : LocalDateTime
}

entity Album {
- name : String
- creationTS : LocalDateTime
- restricted : Boolean
- photos : Set<AlbumPhoto>
}

abstract AbstractPerson {
- userName : String
- firstName : String
- lastName : String
}

entity Person {
- nickname : String
}

entity Photographer {
- studioAddress : Address
- billingAddress : Address
- mobilePhoneNumber : PhoneNumber
- businessPhoneNumber : PhoneNumber
- emails : Set<Email>
' - photos : Set<Photo> - technisch möglich, wenig sinn
}

entity TaggedPerson {
- photo : Photo
- person : Person
- rating : Integer
}

' entity AlbumPhotoContainment {
' - album : Album
' - photo : Photo
' - assignmentTS : LocalDateTime
' }

entity Country {
name : String
iso2Code : String
}

enum Orientation {
PORTRAIT
LANDSCAPE
SQUARE
}

enum EmailType {
PRIVATE
BUSINESS
}

class Address << (V, #FF7700) value-object >> {
- streetNumber : String
- zipCode : String
- city : String
- country : Country
}

class PhoneNumber << (V, #FF7700) value-object >> {
- countryCode : Integer
- areaCode : Integer
- serialNumber : String
}

class Email << (V, #FF7700) value-object >> {
- address : String
- type : EmailType
}

' Album <-- "1..n" AlbumPhotoContainment : references <  -ismi degisti
' Photo <-- "1..n" AlbumPhotoContainment : references <
Album "1" *-- "1..n" AlbumPhoto
Photo <-- "1..n" AlbumPhoto : references <
Photographer -up-|> AbstractPerson
Person -right-|> AbstractPerson
Photographer "0..1" -left- "0..n" Photo : taken by <
Photographer --> "0..1" Address : studioAddress
Photographer --> "0..1" Address : billingAddress
Photographer -right-> PhoneNumber : mobilePhoneNumber
Photographer -up-> "0..1" PhoneNumber : businessPhoneNumber
Photographer *--> "0..n" Email : has >
TaggedPerson -right-> Person : tags >
TaggedPerson --> Photo : describes >
TaggedPerson --* Photo
Email -right-> EmailType
Address "0..n" -left-> Country
Photo --> Orientation

@enduml